gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-main.rs
#[main]
fn foo() {} // { dg-error ".E0658." "" { target *-*-* } }

